# pico_spiSD

./: CMakeLists.txt  README.md
source/: CMakeLists.txt  main.cpp
source/no-OS-FatFS-SD-SPI-Rpi-Pico/FatFs_SPI/sd_driver/: hw_config.c  sd_card.c  sd_spi.c  spi.c
